ciのエラー対応

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -20,6 +20,7 @@ rustflags = [
     "-C", "link-arg=-Tdefmt.x",
     "-C", "target-cpu=cortex-m33",
 ]
+linker = "rust-lld"
 
 [build]
 target = "thumbv8m.main-none-eabihf"
